<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    style="@style/addChannelLayout">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/channelNameLabelTxt" />

    <EditText
        android:id="@+id/channelName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/channelNameHint"
        android:inputType="text"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/channelUrlLabelTxt" />

    <EditText
        android:id="@+id/channelUrl"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/channelUrlHint"
        android:inputType="textUri"/>

    <Button
        android:id="@+id/addChannelButton"
        style="@style/channelScreenButtons"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/addChannelBtnText" />
</LinearLayout>
